<resources>
    <string name="btnDelete">Delete</string>
    <string name="btnCheck">Check</string>
    <string name="btnMenu">Menu</string>
    <string name="btnPause">Pause</string>
    <string name="pauseImage">Pause image</string>
    <string name="Login">Login</string>
    <string name="Registration">Registration</string>
    <string name="alreadyHaveAcc">Have account?</string>
    <string name="Register">Register</string>
    <string name="passConfirm">Confirm password</string>
    <string name="passwordHint">Password</string>
    <string name="logout">logout</string>
    <string name="statistics">statistics</string>
    <string name="restart">restart</string>
    <string name="dark_theme">dark theme</string>
    <string name="appLogo">App Logo</string>
    <string name="pauseMessage">Game paused</string>
    <string name="settings">Settings</string>
    <string name="sounds">Sounds</string>
    <string name="share_app">Share app</string>
    <string name="share_text">Try to play Sudoku! Very cool game!</string>
    <string name="share_via">Share via</string>

    <!--    Toasts    -->
    <string name="light_theme_enabled">light theme enabled</string>
    <string name="dark_theme_enabled">dark theme enabled</string>
    <string name="game_restarted">game restarted</string>
    <string name="choose_sheet">first choose sheet</string>
    <string name="errors_found">Errors found</string>
    <string name="empty_cells_error">No errors found, but there are empty cells</string>
    <string name="solution_correct">Solution is correct!</string>
    <string name="fixed_cell">This cell is fixed!</string>


    <!--    Login/RegisterActivity   -->
    <string name="enter">Enter</string>
    <string name="createAccount">Create account</string>
    <string name="welcome">Welcome!</string>
    <string name="incorrect_login_or_password">Incorrect login or password</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="enter_password_error">Enter your password</string>
    <string name="enter_login_error">Enter your login</string>
    <string name="passwords_match_error">The passwords don\'t match</string>

    <!--    Statistic   -->
    <string name="games_count_statistics">Games count</string>
    <string name="moves_count_statistics">Moves count</string>
    <string name="game_time_statistics">Game time</string>
    <string name="date_statistics">Date</string>
    <string name="time_statistics">Time</string>
    <string name="result_statistics">Result</string>
    <string name="result_win_statistics">Won</string>
    <string name="result_abandoned_statistics">abandoned</string>
    <string name="game_from_statistics">Game from</string>
    <string name="statistics_by_games">Statistics by games</string>

    <!--    Constants   -->
    <string name="language_russian" translatable="false">russian</string>
    <string name="language_english" translatable="false">english</string>
    <string name="app_name" translatable="false">Sudoku</string>
    <string name="btnNum1" translatable="false">1</string>
    <string name="btnNum2" translatable="false">2</string>
    <string name="btnNum3" translatable="false">3</string>
    <string name="btnNum4" translatable="false">4</string>
    <string name="btnNum5" translatable="false">5</string>
    <string name="btnNum6" translatable="false">6</string>
    <string name="btnNum7" translatable="false">7</string>
    <string name="btnNum8" translatable="false">8</string>
    <string name="btnNum9" translatable="false">9</string>
</resources>